Adds player control on all settings pages.

--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Program/ProgramSettingsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Program/ProgramSettingsPage.xaml
@@ -3,56 +3,59 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:Pekspro.RadioStorm.UI.ViewModel.Program;assembly=Pekspro.RadioStorm.UI"
              xmlns:r="clr-namespace:Pekspro.RadioStorm.UI.Resources;assembly=Pekspro.RadioStorm.UI"
+             xmlns:views="clr-namespace:Pekspro.RadioStorm.MAUI.Views"
              x:Class="Pekspro.RadioStorm.MAUI.Pages.Program.ProgramSettingsPage"             
              x:DataType="vm:ProgramSettingsViewModel"
              Title="{Binding ProgramName, Mode=OneWay}"
              >
-    <ScrollView Padding="{StaticResource NormalPageMargin}">
-        <VerticalStackLayout>
+    <Grid RowDefinitions="*,Auto">
+        <ScrollView Padding="{StaticResource NormalPageMargin}">
+            <VerticalStackLayout>
+                <Label Style="{StaticResource SubtitleTextBlockStyle}"
+                       Text="{x:Static r:Strings.ProgramInfo_Sorting_Title}"
+                        />
 
-            <Label Style="{StaticResource SubtitleTextBlockStyle}"
-                   Text="{x:Static r:Strings.ProgramInfo_Sorting_Title}"
-                    />
+                <Label  Text="{x:Static r:Strings.ProgramInfo_Sorting_Description}" />
 
-            <Label  Text="{x:Static r:Strings.ProgramInfo_Sorting_Description}" />
+                <Label  Text="{x:Static r:Strings.ProgramInfo_Sorting_Order_Description}"
+                        Margin="0,12,0,8" />
 
-            <Label  Text="{x:Static r:Strings.ProgramInfo_Sorting_Order_Description}"
-                    Margin="0,12,0,8" />
+                <Picker SelectedIndex="{Binding SortOrderPosition, Mode=TwoWay}"
+                        ItemsSource="{Binding SortOrderStrings}" />
 
-            <Picker SelectedIndex="{Binding SortOrderPosition, Mode=TwoWay}"
-                    ItemsSource="{Binding SortOrderStrings}" />
+                <Label  IsVisible="{Binding IsBackgroundDownloadSupported}"
+                        Style="{StaticResource SubtitleTextBlockStyle}"
+                        Text="{x:Static r:Strings.ProgramInfo_AutoDownload_Title}"
+                        Margin="0,16,0,0"
+                        />
 
-            <Label  IsVisible="{Binding IsBackgroundDownloadSupported}"
-                    Style="{StaticResource SubtitleTextBlockStyle}"
-                    Text="{x:Static r:Strings.ProgramInfo_AutoDownload_Title}"
-                    Margin="0,16,0,0"
-                    />
+                <Label  IsVisible="{Binding IsBackgroundDownloadSupported}"
+                        Text="{x:Static r:Strings.ProgramInfo_AutoDownload_Description}" />
 
-            <Label  IsVisible="{Binding IsBackgroundDownloadSupported}"
-                    Text="{x:Static r:Strings.ProgramInfo_AutoDownload_Description}" />
+                <Label  IsVisible="{Binding IsBackgroundDownloadSupported}"
+                        Text="{x:Static r:Strings.ProgramInfo_AutoDownload_QueueSize_Description}"
+                        Margin="0,12,0,8" />
 
-            <Label  IsVisible="{Binding IsBackgroundDownloadSupported}"
-                    Text="{x:Static r:Strings.ProgramInfo_AutoDownload_QueueSize_Description}"
-                    Margin="0,12,0,8" />
+                <Picker IsVisible="{Binding IsBackgroundDownloadSupported}"
+                        SelectedItem="{Binding SelectedDownloadOptionItem, Mode=TwoWay}"
+                        ItemsSource="{Binding DownloadOptionsItems}" />
 
-            <Picker IsVisible="{Binding IsBackgroundDownloadSupported}"
-                    SelectedItem="{Binding SelectedDownloadOptionItem, Mode=TwoWay}"
-                    ItemsSource="{Binding DownloadOptionsItems}" />
+                <!--<Button Content="{x:Static r:Strings.Settings_Downloads_Button_ShowDownladInformation}" Grid.Row="7"
+                        Visibility="{Binding IsBackgroundDownloadSupported, Converter={StaticResource BoolToVisibilityConverter}}"
+                        Margin="-8,8,0,0"
+                        Style="{StaticResource TextBlockButtonStyle}">
+                    <Button.Flyout>
+                        <Flyout>
+                            <TextBlock MaxWidth="288"
+                                       TextWrapping="WrapWholeWords"
+                                       Text="{Binding DownloadInformationText}" />
+                        </Flyout>
+                    </Button.Flyout>
+                </Button>-->
 
-            <!--<Button Content="{x:Static r:Strings.Settings_Downloads_Button_ShowDownladInformation}" Grid.Row="7"
-                    Visibility="{Binding IsBackgroundDownloadSupported, Converter={StaticResource BoolToVisibilityConverter}}"
-                    Margin="-8,8,0,0"
-                    Style="{StaticResource TextBlockButtonStyle}">
-                <Button.Flyout>
-                    <Flyout>
-                        <TextBlock MaxWidth="288"
-                                   TextWrapping="WrapWholeWords"
-                                   Text="{Binding DownloadInformationText}" />
-                    </Flyout>
-                </Button.Flyout>
-            </Button>-->
+            </VerticalStackLayout>
+        </ScrollView>
 
-        </VerticalStackLayout>
-    </ScrollView>
-
+        <views:PlayerControl Grid.Row="1" />
+    </Grid>
 </ContentPage>
