--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/AboutPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/AboutPage.xaml
@@ -8,112 +8,116 @@
              x:Class="Pekspro.RadioStorm.MAUI.Pages.Settings.AboutPage"
              x:DataType="vm:AboutViewModel"
              Title="{x:Static r:Strings.About_Title}">
-    <ScrollView Padding="{StaticResource NormalPageMargin}">
-        <VerticalStackLayout Spacing="8">
+    <Grid RowDefinitions="*,Auto">
+        <ScrollView Padding="{StaticResource NormalPageMargin}">
+            <VerticalStackLayout Spacing="8">
 
-            <Border Style="{StaticResource Card}" 
-                    Grid.Row="0" 
-                    Margin="{StaticResource NormalPageMargin}">
+                <Border Style="{StaticResource Card}" 
+                        Grid.Row="0" 
+                        Margin="{StaticResource NormalPageMargin}">
                 
-                <Grid x:Name="GridLayout" 
-                  HorizontalOptions="FillAndExpand"
-                  Style="{StaticResource CardLayout}">
+                    <Grid x:Name="GridLayout" 
+                      HorizontalOptions="FillAndExpand"
+                      Style="{StaticResource CardLayout}">
 
-                    <VerticalStackLayout Spacing="8" x:Name="AboutLayout">
-                        <Label Text="{Binding VersionString}" Style="{StaticResource SubtitleTextBlockStyle}" />
+                        <VerticalStackLayout Spacing="8" x:Name="AboutLayout">
+                            <Label Text="{Binding VersionString}" Style="{StaticResource SubtitleTextBlockStyle}" />
 
-                        <Label Text="{x:Static r:Strings.About_Description}" />
+                            <Label Text="{x:Static r:Strings.About_Description}" />
 
-                        <Button Command="{Binding OpenRepositoryCommand}"
-                            Style="{StaticResource HyperlinkButton}"
-                            Text="{x:Static r:Strings.General_Pekspro_Repository_Url}"
-                            />
-                    </VerticalStackLayout>
-                </Grid>
-            </Border>
+                            <Button Command="{Binding OpenRepositoryCommand}"
+                                Style="{StaticResource HyperlinkButton}"
+                                Text="{x:Static r:Strings.General_Pekspro_Repository_Url}"
+                                />
+                        </VerticalStackLayout>
+                    </Grid>
+                </Border>
 
-            <Rectangle Style="{StaticResource Separator}" />
+                <Rectangle Style="{StaticResource Separator}" />
             
-            <Label Text="{x:Static r:Strings.About_BuildInformation_Title}" Style="{StaticResource SubtitleTextBlockStyle}" />
+                <Label Text="{x:Static r:Strings.About_BuildInformation_Title}" Style="{StaticResource SubtitleTextBlockStyle}" />
 
-            <Grid ColumnDefinitions="auto, auto" RowDefinitions="auto, auto, auto, auto, auto" ColumnSpacing="8">
-                <Label Grid.Row="0" Grid.Column="0"
-                       Style="{StaticResource DetailedTextStyle}" 
-                       IsVisible="{Binding BuildTimeDetails, Converter={StaticResource NullToIsVisibleConverter}}"
-                       Text="{x:Static r:Strings.About_BuildInformation_BuildTime}"
-                       />
+                <Grid ColumnDefinitions="auto, auto" RowDefinitions="auto, auto, auto, auto, auto" ColumnSpacing="8">
+                    <Label Grid.Row="0" Grid.Column="0"
+                           Style="{StaticResource DetailedTextStyle}" 
+                           IsVisible="{Binding BuildTimeDetails, Converter={StaticResource NullToIsVisibleConverter}}"
+                           Text="{x:Static r:Strings.About_BuildInformation_BuildTime}"
+                           />
 
-                <Label Grid.Row="0" Grid.Column="1"
-                       Style="{StaticResource DetailedTextStyle}" 
-                       IsVisible="{Binding BuildTimeDetails, Converter={StaticResource NullToIsVisibleConverter}}"
-                       Text="{Binding BuildTimeDetails}"
-                       />
-
-
-                <Label Grid.Row="1" Grid.Column="0"
-                       Style="{StaticResource DetailedTextStyle}" 
-                       IsVisible="{Binding DotNetVersionString, Converter={StaticResource NullToIsVisibleConverter}}"
-                       Text="{x:Static r:Strings.About_BuildInformation_DotnetVersion}" 
-                       />
-
-                <Label Grid.Row="1" Grid.Column="1"
-                       Style="{StaticResource DetailedTextStyle}" 
-                       IsVisible="{Binding DotNetVersionString, Converter={StaticResource NullToIsVisibleConverter}}"
-                       Text="{Binding DotNetVersionString}"
-                       />
+                    <Label Grid.Row="0" Grid.Column="1"
+                           Style="{StaticResource DetailedTextStyle}" 
+                           IsVisible="{Binding BuildTimeDetails, Converter={StaticResource NullToIsVisibleConverter}}"
+                           Text="{Binding BuildTimeDetails}"
+                           />
 
 
-                <Label Grid.Row="2" Grid.Column="0"
-                       Style="{StaticResource DetailedTextStyle}" 
-                       IsVisible="{OnPlatform WinUI={Binding MauiWorkloadWindowsVersionString, Converter={StaticResource NullToIsVisibleConverter}}, Default=False}"
-                       Text="{x:Static r:Strings.About_BuildInformation_MauiVersion}"
-                       />
+                    <Label Grid.Row="1" Grid.Column="0"
+                           Style="{StaticResource DetailedTextStyle}" 
+                           IsVisible="{Binding DotNetVersionString, Converter={StaticResource NullToIsVisibleConverter}}"
+                           Text="{x:Static r:Strings.About_BuildInformation_DotnetVersion}" 
+                           />
 
-                <Label Grid.Row="2" Grid.Column="1"
-                       Style="{StaticResource DetailedTextStyle}" 
-                       IsVisible="{OnPlatform WinUI={Binding MauiWorkloadWindowsVersionString, Converter={StaticResource NullToIsVisibleConverter}}, Default=False}"
-                       Text="{Binding MauiWorkloadWindowsVersionString}" 
-                       />
+                    <Label Grid.Row="1" Grid.Column="1"
+                           Style="{StaticResource DetailedTextStyle}" 
+                           IsVisible="{Binding DotNetVersionString, Converter={StaticResource NullToIsVisibleConverter}}"
+                           Text="{Binding DotNetVersionString}"
+                           />
 
-                <Label Grid.Row="2" Grid.Column="0"
-                       Style="{StaticResource DetailedTextStyle}" 
-                       IsVisible="{OnPlatform Android={Binding MauiWorkloadAndroidVersionString, Converter={StaticResource NullToIsVisibleConverter}}, Default=False}"
-                       Text="{x:Static r:Strings.About_BuildInformation_MauiVersion}"
-                        />
 
-                <Label Grid.Row="2" Grid.Column="1"
-                       Style="{StaticResource DetailedTextStyle}" 
-                       IsVisible="{OnPlatform Android={Binding MauiWorkloadAndroidVersionString, Converter={StaticResource NullToIsVisibleConverter}}, Default=False}"
-                       Text="{Binding MauiWorkloadAndroidVersionString}"
-                       />
+                    <Label Grid.Row="2" Grid.Column="0"
+                           Style="{StaticResource DetailedTextStyle}" 
+                           IsVisible="{OnPlatform WinUI={Binding MauiWorkloadWindowsVersionString, Converter={StaticResource NullToIsVisibleConverter}}, Default=False}"
+                           Text="{x:Static r:Strings.About_BuildInformation_MauiVersion}"
+                           />
 
-                <Label Grid.Row="3" Grid.Column="0"
-                       Style="{StaticResource DetailedTextStyle}" 
-                       IsVisible="{Binding ShortCommitId, Converter={StaticResource NullToIsVisibleConverter}}"
-                       Text="{x:Static r:Strings.About_BuildInformation_Commit}"
-                       />
+                    <Label Grid.Row="2" Grid.Column="1"
+                           Style="{StaticResource DetailedTextStyle}" 
+                           IsVisible="{OnPlatform WinUI={Binding MauiWorkloadWindowsVersionString, Converter={StaticResource NullToIsVisibleConverter}}, Default=False}"
+                           Text="{Binding MauiWorkloadWindowsVersionString}" 
+                           />
 
-                <Label Grid.Row="3" Grid.Column="1"
-                       Style="{StaticResource DetailedTextStyle}" 
-                       IsVisible="{Binding ShortCommitId, Converter={StaticResource NullToIsVisibleConverter}}"
-                       Text="{Binding ShortCommitId}"
-                       />
+                    <Label Grid.Row="2" Grid.Column="0"
+                           Style="{StaticResource DetailedTextStyle}" 
+                           IsVisible="{OnPlatform Android={Binding MauiWorkloadAndroidVersionString, Converter={StaticResource NullToIsVisibleConverter}}, Default=False}"
+                           Text="{x:Static r:Strings.About_BuildInformation_MauiVersion}"
+                            />
+
+                    <Label Grid.Row="2" Grid.Column="1"
+                           Style="{StaticResource DetailedTextStyle}" 
+                           IsVisible="{OnPlatform Android={Binding MauiWorkloadAndroidVersionString, Converter={StaticResource NullToIsVisibleConverter}}, Default=False}"
+                           Text="{Binding MauiWorkloadAndroidVersionString}"
+                           />
+
+                    <Label Grid.Row="3" Grid.Column="0"
+                           Style="{StaticResource DetailedTextStyle}" 
+                           IsVisible="{Binding ShortCommitId, Converter={StaticResource NullToIsVisibleConverter}}"
+                           Text="{x:Static r:Strings.About_BuildInformation_Commit}"
+                           />
+
+                    <Label Grid.Row="3" Grid.Column="1"
+                           Style="{StaticResource DetailedTextStyle}" 
+                           IsVisible="{Binding ShortCommitId, Converter={StaticResource NullToIsVisibleConverter}}"
+                           Text="{Binding ShortCommitId}"
+                           />
                 
-                <Label Grid.Row="4" Grid.Column="0"
-                       Style="{StaticResource DetailedTextStyle}" 
-                       IsVisible="{Binding Branch, Converter={StaticResource NullToIsVisibleConverter}}"
-                       Text="{x:Static r:Strings.About_BuildInformation_Branch}"
-                       />
+                    <Label Grid.Row="4" Grid.Column="0"
+                           Style="{StaticResource DetailedTextStyle}" 
+                           IsVisible="{Binding Branch, Converter={StaticResource NullToIsVisibleConverter}}"
+                           Text="{x:Static r:Strings.About_BuildInformation_Branch}"
+                           />
 
-                <Label Grid.Row="4" Grid.Column="1"
-                       Style="{StaticResource DetailedTextStyle}" 
-                       IsVisible="{Binding Branch, Converter={StaticResource NullToIsVisibleConverter}}"
-                       Text="{Binding Branch}"
-                       />
-            </Grid>
+                    <Label Grid.Row="4" Grid.Column="1"
+                           Style="{StaticResource DetailedTextStyle}" 
+                           IsVisible="{Binding Branch, Converter={StaticResource NullToIsVisibleConverter}}"
+                           Text="{Binding Branch}"
+                           />
+                </Grid>
 
-            <views:DebugSettingsControl x:Name="DebugSettings" />
+                <views:DebugSettingsControl x:Name="DebugSettings" />
 
-        </VerticalStackLayout>
-    </ScrollView>
+            </VerticalStackLayout>
+        </ScrollView>
+
+        <views:PlayerControl Grid.Row="1" />
+    </Grid>
 </ContentPage>
