--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Episode/DownloadsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Episode/DownloadsPage.xaml
@@ -75,7 +75,7 @@
 
     <Grid RowSpacing="0" RowDefinitions="Auto,*,Auto">
 
-        <views:DownloadState Grid.Row="0" Grid.RowSpan="2" />
+        <views:DownloadState Grid.Row="0" Grid.RowSpan="2" NoDataText="{x:Static r:Strings.Downloads_Empty}" />
 
         <!-- Breaks on Android: ItemSizingStrategy="MeasureFirstItem"-->
         <RefreshView 
